Revert "Second commit"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Kaam</h1>
+    <h1>working</h1>
     <p>complete it</p>
   </body>
 </html>
